[package]
name = "tree-sitter-idris2"
description = "A dependently typed functional programming language, with QTT"
version = "0.1.0"
authors = ["Asher Frost"]
license = "BSD-2"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "idris2"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-idris2"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
